# mlcc

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
grammar/: lexer.l  parser.y
include/asm/: allocator.h  instructions.h  ir_builder.h  operands.h
include/ast/: declarations.h  expressions.h  statements.h  translation_unit.h
include/driver/: driver.h  scanner.h
include/optimizer/: asm_optimizer.h  control_flow_graph.h  control_flow_utils.h  tac_optimizer.h
include/semantic/: analyzer.h  loop_analyzer.h  symbol_resolver.h  symbol_table.h  type_checker.h  types.h
include/tac/: instruction.h  tac_visitor.h
include/types/: function_type.h  integral_constant.h  numeric_constant.h  primitive_type.h  type.h
include/visitors/: compile_visitor.h  frame_info.h  print_visitor.h  semantic_visitor.h  tac_visitor.h  visitor.h
src/asm/: allocator.cpp  instructions.cpp  ir_builder.cpp  operands.cpp
src/ast/: declarations.cpp  expressions.cpp  statements.cpp  translation_unit.cpp
src/driver/: driver.cpp
src/optimizer/: asm_optimizer.cpp  control_flow_graph.cpp  control_flow_utils.cpp  tac_optimizer.cpp
src/semantic/: analyzer.cpp  loop_analyzer.cpp  symbol_resolver.cpp  symbol_table.cpp  type_checker.cpp
src/tac/: instruction.cpp  tac_visitor.cpp
src/types/: function_type.cpp  integral_constant.cpp  numeric_constant.cpp  primitive_type.cpp
src/visitors/: compile_visitor.cpp  print_visitor.cpp  semantic_visitor.cpp  tac_visitor.cpp
